fixed the gap between BG and header

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -39,7 +39,6 @@ html {
 header {
   position: fixed;
   width: 100%;
-  border-bottom: solid 1px #c6c1c1;
   background-color: white;
   height: 5.3rem;
   z-index: 100;
@@ -126,7 +125,7 @@ header .mobile {
   position: relative;
   background-image: url(../images/banner-landingpage.jpg);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 0;
   background-size: cover;
   width: 100%;
 }
